--- a/guide/html/convention_ia.html
+++ b/guide/html/convention_ia.html
@@ -41,6 +41,13 @@
             padding: 5px 10px;
             text-align: left;
             vertical-align: middle;
+            color: #000;
+        }
+        
+        table tbody td:nth-child(7) a {
+            font-family: Consolas;
+            letter-spacing: -.5px;
+            font-weight: 700;
         }
         
         table tbody td:first-child {
