--- a/guide/html/convention_ia.html
+++ b/guide/html/convention_ia.html
@@ -219,6 +219,19 @@
             color: #91ab44;
             margin-left: 10px;
         }
+        
+        .device-btns strong {
+            display: block;
+            margin: 5px 0;
+        }
+        
+        .device-btns button {
+            border: 1px solid #aaa;
+            border-radius: 5px;
+            padding: 0 5px;
+            margin: 5px 2px;
+            background-color: #fff;
+        }
     </style>
 </head>
 
