--- a/guide/html/convention_tab02.html
+++ b/guide/html/convention_tab02.html
@@ -29,7 +29,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td>테스트2</td>
+            <td class="link">/html/ini.html</td>
             <td></td>
         </tr>
         <tr>
@@ -39,7 +39,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td class="link">/html/test.html</td>
+            <td>테스트2</td>
             <td></td>
         </tr>
         <tr>
