--- a/guide/html/module_list.html
+++ b/guide/html/module_list.html
@@ -77,7 +77,18 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-                                    <div></div>
+                                    <ol class="lists" data-list-type="dot">
+                                        <li>과도한 대출은 개인신용평점 하락의 원인이 될 수 있습니다.</li>
+                                    </ol>
+                                    <ol class="lists" data-list-type="number">
+                                        <li>1. 과도한 대출은 개인신용평점 하락의 원인이 될 수 있습니다.</li>
+                                    </ol>
+                                    <ol class="lists" data-list-type="circle">
+                                        <li>① 과도한 대출은 개인신용평점 하락의 원인이 될 수 있습니다.</li>
+                                    </ol>
+                                    <ol class="lists" data-list-type="cheracter">
+                                        <li>가. 과도한 대출은 개인신용평점 하락의 원인이 될 수 있습니다.</li>
+                                    </ol>
                                 </pre>
                             </div>
                         </section>
