--- a/guide/html/convention_tab01.html
+++ b/guide/html/convention_tab01.html
@@ -2,10 +2,10 @@
     <colgroup>
         <col width="3%">
         <col width="10%">
-        <col width="12%">
-        <col width="12%">
-        <col width="13%">
-        <col width="13%">
+        <col width="14%">
+        <col width="14%">
+        <col width="14%">
+        <col width="14%">
         <col width="*">
         <col width="10%">
     </colgroup>
@@ -16,41 +16,31 @@
             <th scope="col">2Depth</th>
             <th scope="col">3Depth</th>
             <th scope="col">4Depth</th>
-            <th scope="col">5Depth</th>
+            <th scope="col">Pop</th>
             <th scope="col">page</th>
             <th scope="col">비고</th>
         </tr>
     </thead>
     <tbody class="cklist">
         <tr>
-            <td></td>
-            <td>첫번째메뉴</td>
-            <td>두번째메뉴</td>
-            <td>세번째메뉴1</td>
+            <td>22</td>
             <td></td>
             <td></td>
-            <td class="link">/html/ini.html</td>
-            <td><span class="new">11-11</span></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link">테스트1</td>
+            <td><span class="new">1111-11-11</span></td>
         </tr>
         <tr>
             <td></td>
             <td></td>
             <td></td>
-            <td>세번째메뉴2</td>
-            <td></td>
-            <td></td>
-            <td class="link ing">/html/_temp/ini2.html</td>
-            <td><span class="mod">11-11</span><span class="mod">11-12</span><span class="mod">11-13</span></td>
-        </tr>
-        <tr>
             <td></td>
             <td></td>
             <td></td>
-            <td>세번째메뉴2</td>
-            <td></td>
-            <td></td>
-            <td class="link">/html/test2.html</td>
-            <td></td>
+            <td>테스트1</td>
+            <td><span class="mod">1111-11-11</span></td>
         </tr>
         <tr>
             <td></td>
@@ -60,6 +50,66 @@
             <td></td>
             <td></td>
             <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td class="link"></td>
             <td></td>
         </tr>
     </tbody>
