--- a/guide/html/module_menu.html
+++ b/guide/html/module_menu.html
@@ -28,16 +28,19 @@
                         <h2>tab menu</h2>
                         <section>
                             <ul class="scr">
-                                <li>data-role="tab"</li>
-                                <li>탭의 <em></em>메뉴영역인 area-tab-mnu</em>와 탭의 <em>컨텐츠 영역인 area-tab-cont</em>를 명시선언</li>
+                                <li>탭의 기능인 data-role="tab", 탭의 스타일은 클래스로 정의하여 분리</li>
+                                <li>탭의 <em>메뉴영역인 area-tab-mnu</em>와 탭의 <em>컨텐츠 영역인 area-tab-cont</em>를 명시선언</li>
                                 <li>각각의 role은 스크립트에서 처리</li>
                                 <li>메뉴의 aria-controls과 컨텐츠의 id연결은 스크립로 랜덤문자를 생성</li>
-                                <li>페이지별 단건인 테이블에서 SHS.tab.active("[data-role='tab']", 0) 인덱스번호로 탭의 활성화를 변경할수 있음</li>
+                                <li>페이지별 단건인 테이블에서 SHS.tab.active("[data-role='tab']", 0) 인덱스번호로 탭의 활성화를 변경</li>
+                                <li>탭의 균등사이즈는 탭영역인 li의 flex속성을 1로 정의하고, 앵커부분의 word-break(1byte문자) 확인</li>
+                                <li><em class="tag tag"></em>.tabs.type01은 임시적용된 스타일</li>
+                                <li><em class="tag tag03"></em>페이지내 여러개의 탭메뉴와 탭안의 멀티탭 테스트필요</li>
                             </ul>
                             <div class="rendering">
                                 <h3>Screen Rendering</h3>
 
-                                <div data-role="tab" data-show="3" class="tabs">
+                                <div data-role="tab" data-show="3" class="tabs01">
                                     <ul class="area-tab-mnu">
                                         <li><a href="#">연혁</a></li>
                                         <li><a href="#"><span>인사말</span></a></li>
