--- a/guide/html/module_etc.html
+++ b/guide/html/module_etc.html
@@ -289,7 +289,7 @@
                         <h2>icon & chips & tag</h2>
                         <section>
                             <ul class="scr">
-                                <li>아이콘은 클래스와 data-ico의 조합으로 사용(변수를 사용할수 있게 css를 같이 정의) <a href="module_icon.html">아이콘 리스트</a></li>
+                                <li>아이콘은 클래스와 data-ico의 조합으로 사용(변수를 사용할수 있게 css를 같이 정의) <a href="module_icon.html" target="_blank">아이콘 리스트</a></li>
                                 <li>data-ico의 정의에 따라 이미지를 선언</li>
                             </ul>
                             <div class="rendering">
