--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -178,6 +178,7 @@
                                 <h3>Screen Rendering</h3>
                                 <div data-role="table" data-stand="right">
                                     <table>
+                                        <caption>내가 입력한 캡션이 최우선으로 적용</caption>
                                         <tbody>
                                             <tr>
                                                 <th scope="col">미인을</th>
@@ -200,6 +201,7 @@
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
                                     &lt;div data-role="table" data-stand="right">
                                         &lt;table>
+                                            &lt;caption>내가 입력한 캡션이 최우선으로 적용&lt;/caption>
                                             &lt;tbody>
                                                 &lt;tr>
                                                     &lt;th scope="col">&lt;/th>
