--- a/guide/html/convention_tab02.html
+++ b/guide/html/convention_tab02.html
@@ -1,13 +1,13 @@
 <table cellspacing="0" border="1">
     <colgroup>
         <col width="3%">
-        <col width="8%">
         <col width="10%">
-        <col width="10%">
-        <col width="10%">
-        <col width="10%">
+        <col width="12%">
+        <col width="12%">
+        <col width="12%">
+        <col width="13%">
         <col width="*">
-        <col width="10%">
+        <col width="15%">
     </colgroup>
     <thead>
         <tr>
@@ -16,7 +16,7 @@
             <th scope="col">2Depth</th>
             <th scope="col">3Depth</th>
             <th scope="col">4Depth</th>
-            <th scope="col">5Depth</th>
+            <th scope="col">Pop</th>
             <th scope="col">page</th>
             <th scope="col">비고</th>
         </tr>
