--- a/guide/html/convention_html.html
+++ b/guide/html/convention_html.html
@@ -22,7 +22,7 @@
                 <script src="../js/menu_inc.js"></script>
             </div>
             <div class="guide-contents">
-                <h3></h3>
+                <h3 class="tit"></h3>
                 <section>
                     <article>
                         <h2>General Formatting Rules</h2>
@@ -38,22 +38,22 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-														&lt;!DOCTYPE html&gt;
-														&lt;html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko"&gt;
-														&lt;head&gt;
-															&lt;meta charset="UTF-8"&gt;
-															&lt;meta http-equiv="X-UA-Compatible" content="ie=edge"&gt;
-															&lt;meta name="format-detection" content="telephone=no"&gt;
-															&lt;meta name="title" content=""&gt;
-															&lt;meta name="description" content=""&gt;
-															&lt;meta name="keywords" content=""&gt;
-															&lt;title&gt;Page title&lt;/title&gt;
-														&lt;/head&gt;
-														&lt;body&gt;
-															<h1>신한저축은행</h1>
-														&lt;/body&gt;
-														&lt;/html&gt;
-												</pre>
+                                    &lt;!DOCTYPE html&gt;
+                                    &lt;html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko"&gt;
+                                        &lt;head&gt;
+                                            &lt;meta charset="UTF-8"&gt;
+                                            &lt;meta http-equiv="X-UA-Compatible" content="ie=edge"&gt;
+                                            &lt;meta name="format-detection" content="telephone=no"&gt;
+                                            &lt;meta name="title" content=""&gt;
+                                            &lt;meta name="description" content=""&gt;
+                                            &lt;meta name="keywords" content=""&gt;
+                                            &lt;title&gt;Page title&lt;/title&gt;
+                                        &lt;/head&gt;
+                                        &lt;body&gt;
+                                            <h1>신한저축은행</h1>
+                                        &lt;/body&gt;
+                                    &lt;/html&gt;
+                                </pre>
                             </div>
                         </section>
 
@@ -66,8 +66,8 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;!DOCTYPE html&gt;
-												</pre>
+                                    &lt;!DOCTYPE html&gt;
+                                </pre>
                             </div>
                         </section>
 
@@ -80,8 +80,8 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko"&gt;
-												</pre>
+                                    &lt;html xmlns="http://www.w3.org/1999/xhtml" lang="ko" xml:lang="ko"&gt;
+                                </pre>
                             </div>
                         </section>
 
@@ -93,12 +93,12 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;meta charset="UTF-8">
-												</pre>
+                                    &lt;meta charset="UTF-8">
+                                </pre>
                             </div>
                         </section>
 
-                        <h2>인터넷 익스플로러 호환 모드</h2>
+                        <!-- <h2>인터넷 익스플로러 호환 모드</h2>
                         <section>
                             <ul class="scr">
                                 <li>인터넷 익스플로러는
@@ -108,10 +108,10 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;meta http-equiv="X-UA-Compatible" content="ie=edge">
-												</pre>
+                                    &lt;meta http-equiv="X-UA-Compatible" content="ie=edge">
+                                </pre>
                             </div>
-                        </section>
+                        </section> -->
 
                         <h2>Docu. Title</h2>
                         <section>
@@ -122,21 +122,22 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;title>메뉴명 | 신한저축은행&lt;/title>
-										</div>
-								</section>
+                                    &lt;title>메뉴명 | 신한저축은행&lt;/title>
+                                </pre>
+                            </div>
+                        </section>
 
-								<h2>External Link</h2>
-								<section>
-										<p class="scr">HTML5 스펙에 따르면 css와 js파일을 불러올 때 type 속성을 생략가능 <em>text/css 와 text/javascript 속성값이 각각 기본값</em>(선택적용)</p>
-										<div class="exp">
-										<h3>code pattern</h3>
-										<pre class="brush: xhtml; gutter: false; toolbar:false">
-										<!-- External CSS -->
-										&lt;link rel="stylesheet" href="common.css">
-										<!-- JavaScript -->
-										&lt;script src="common.js"></script>
-										</pre>
+                        <h2>External Link</h2>
+                        <section>
+                            <p class="scr">HTML5 스펙에 따르면 css와 js파일을 불러올 때 type 속성을 생략가능 <em>text/css 와 text/javascript 속성값이 각각 기본값</em>(선택적용)</p>
+                            <div class="exp">
+                                <h3>code pattern</h3>
+                                <pre class="brush: xhtml; gutter: false; toolbar:false">
+                                    <!-- External CSS -->
+                                    &lt;link rel="stylesheet" href="common.css">
+                                    <!-- JavaScript -->
+                                    &lt;script src="common.js"></script>
+                                </pre>
                             </div>
                         </section>
 
@@ -147,31 +148,31 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-												&lt;input type="text" disabled>
-												&lt;input type="checkbox" checked>
-												&lt;select>
-												&lt;option value="1" selected></option>
-												&lt;/select>
-												</pre>
+                                    &lt;input type="text" disabled>
+                                    &lt;input type="checkbox" checked>
+                                    &lt;select>
+                                    &lt;option value="1" selected></option>
+                                    &lt;/select>
+                                </pre>
                             </div>
                         </section>
 
                         <h2>Entity Code</h2>
                         <section>
-                            <p class="scr">모든 문자를 entity로 변환할 필요는 없으며, 아래의 케이스만 적용</blockquote>
-                                <div class="rendering">
-                                    <h3>code pattern</h3>
-                                    <pre class="brush: xhtml; gutter: false; toolbar:false">
-												<!--Less Than(&lt;)-->
-												&amp;lt;
-												<!--Greater Than(&gt;)-->
-												&amp;gt;
-												<!--Ampersand(&amp;)-->
-												&amp;amp;
-												<!--En dash(&ndash;)-->
-												&amp;ndash;
-												</pre>
-                                </div>
+                            <p class="scr">모든 문자를 entity로 변환할 필요는 없으며, 아래의 케이스만 적용</p>
+                            <div class="rendering">
+                                <h3>code pattern</h3>
+                                <pre class="brush: xhtml; gutter: false; toolbar:false">
+                                    <!--Less Than(&lt;)-->
+                                    &amp;lt;
+                                    <!--Greater Than(&gt;)-->
+                                    &amp;gt;
+                                    <!--Ampersand(&amp;)-->
+                                    &amp;amp;
+                                    <!--En dash(&ndash;)-->
+                                    &amp;ndash;
+                                </pre>
+                            </div>
                         </section>
                     </article>
                 </section>
