--- a/guide/html/module_button.html
+++ b/guide/html/module_button.html
@@ -69,10 +69,11 @@
 
                                 <h4 class="stit">타입 <em class="emp-nd">type-[*]</em></h4>
                                 <div>
-                                    <button type="button" class="btn color-st type-underline">블록버튼</button>
-                                    <button type="button" class="btn color-st type-underline-center">블록버튼</button>
+                                    <button type="button" class="btn type-underline">블록버튼</button>
+                                    <button type="button" class="btn type-underline-center">블록버튼</button>
+                                    <button type="button" class="btn type-underline-solid">블록버튼</button>
                                     <button type="button" class="btn color-st type-ico">
-                                        <i class=""></i>
+                                        <i class="ico-set" data-ico="chevron-up"></i>
                                         <span>앞에</span>
                                     </button>
                                     <button type="button" class="btn color-st type-ico">
@@ -135,10 +136,10 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-							<div>
-							...
-							</div>
-							</pre>
+                                    <div>
+                                        ...
+                                    </div>
+                                </pre>
                             </div>
                         </section>
 
@@ -156,10 +157,10 @@
                             <div class="exp">
                                 <h3>code pattern</h3>
                                 <pre class="brush: xhtml; gutter: false; toolbar:false">
-							<div>
-							...
-							</div>
-							</pre>
+                                    <div>
+                                        ...
+                                    </div>
+                                </pre>
                             </div>
                         </section>
                     </article>
