--- a/guide/html/module_etc.html
+++ b/guide/html/module_etc.html
@@ -191,7 +191,7 @@
                         <section>
                             <ul class="scr">
                                 <li>3개의 파라미터를 전달하며, 각각 $(this), 툴팁아이디, 고정높이값(auto scroll)</li>
-                                <li>클릭시 <em>.tooltip 노드안에 레이어영역 부분을 append / momove</em></li>
+                                <li>클릭시 <em>.tooltip 노드안에 레이어영역 부분을 append / remove</em></li>
                                 <li>요소의 아래방향으로 툴팁되며, 좌우는 윈도우의 가운데를 기점으로 여백이 많은곳으로 노출</li>
                                 <li><em class="tag"></em>기능상으로만 우선 적용되었으며, 디자인은 미반영상태</li>
                             </ul>
@@ -353,7 +353,7 @@
                         <h2>dimmed layer</h2>
                         <section>
                             <ul class="scr">
-                                <li>특정한 경우에 딤드만 필요한 경우</li>
+                                <li>딤드만 필요한 경우</li>
                             </ul>
                             <div class="exp">
                                 <h3>code pattern</h3>
