--- a/guide/html/module_table.html
+++ b/guide/html/module_table.html
@@ -58,7 +58,7 @@
                                 <li>테이블의 정렬성격에 따라 <em>data-stand="[center|right]"</em>를 지정</li>
                                 <li>정렬의 기본은 헤더셀은 가운데, 테이터셀은 왼쪽이며 <em>각셀마다 stand-[left|center|right] 개별클래스 적용</em></li>
                                 <li>캡션태그는 스크립트에서 자동생성하며 명시적인 선언을 최우선으로 함.</li>
-                                <li><em>data-role="table-subject"</em>을 적용하면 해더셀의 정보에 추가적인 제목([테이블의 제목셀][등의 정보를 제공]하는 ~ [테이블의제목]안내)을 덧붙여 캡션을 구성</li>
+                                <li><em>data-role="table-subject"</em>을 적용하면 해더셀의 정보에 추가적인 제목([테이블의 헤더셀][등의 정보를 제공]하는 [테이블의 제목]안내)을 덧붙여 캡션을 구성</li>
                                 <li>타이틀영역의 우측의 해드노트와 테이블의 하단의 풋노트영역은 필요시 추가</li>
                                 <li>자유도가 있는 테이블의 생성이 필요한 경우에 따라 테이블에 클래스적용 가능</li>
                                 <li>동적으로 생성된 경우는 <em>SHS.tblSummary()</em></li>
