--- a/guide/html/convention_ia.html
+++ b/guide/html/convention_ia.html
@@ -310,6 +310,8 @@
 
                                 <!--  -->
                                 <div class="frt_tbl10 frt_tbl tab-ele"></div>
+
+                                <!-- mobile quick view -->
                                 <div class="mobile-frame">
                                     <iframe src="" frameborder="0" id="mFrame"></iframe>
                                     <span class="frame_close">닫기</span>
