--- a/guide/html/module_form.html
+++ b/guide/html/module_form.html
@@ -206,20 +206,20 @@
                                 </div>
                                 <div class="by-solid" data-nospace>
                                     <div class="chk">
-                                        <input type="radio" id="tempRdoS02" name="tempRdo" checked>
-                                        <label for="tempRdoS02"><span>라디오1</span></label>
+                                        <input type="radio" id="tempRdoSolid02" name="tempRdoSolid" checked>
+                                        <label for="tempRdoSolid02"><span>라디오1</span></label>
                                     </div>
                                     <div class="chk">
-                                        <input type="radio" id="tempRdoS03" name="tempRdo" checked>
-                                        <label for="tempRdoS03">줄바꿈<br>라디오2</label>
+                                        <input type="radio" id="tempRdoSolid03" name="tempRdoSolid" checked>
+                                        <label for="tempRdoSolid03">줄바꿈<br>라디오2</label>
                                     </div>
                                     <div class="chk">
-                                        <input type="radio" id="tempRdoS04" name="tempRdo" disabled>
-                                        <label for="tempRdoS04">선택불능</label>
+                                        <input type="radio" id="tempRdoSolidExp04" name="tempRdoSolidExp" disabled>
+                                        <label for="tempRdoSolidExp04">선택불능</label>
                                     </div>
                                     <div class="chk">
-                                        <input type="radio" id="tempRdoS05" name="tempRdoExp" checked disabled>
-                                        <label for="tempRdoS05">해제불능</label>
+                                        <input type="radio" id="tempRdoSolidExp05" name="tempRdoSolidExp" checked disabled>
+                                        <label for="tempRdoSolidExp05">해제불능</label>
                                     </div>
                                 </div>
                                 <div class="exp">
